--- a/vintage-store/src/main/resources/templates/ItemPage/book.html
+++ b/vintage-store/src/main/resources/templates/ItemPage/book.html
@@ -1,18 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Book {book.id}</title>
-</head>
-<body>
-Id: {book.id}
-Title: {book.title}
-Description: {book.description}
-Price: {book.price}
-Isbn: {book.isbn}
-Number of Pages: {book.nbOfPages}
-Publication date: {book.publicationDate}
-Language: {book.language}
-Created date: {book.createdDate}
-</body>
-</html>
+{#include base.html}
+{#title}Book {book.id}{/title}
+{#body}
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Id</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.id}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Title</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.title}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Description</label>
+    <div class="col-sm-10">
+        <textarea readonly class="form-control">{book.description}</textarea>
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Price</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.price}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Artist</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.artist.name}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Isbn</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.isbn}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Number of Pages</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.nbOfPages}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Publication Date</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.publicationDate}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Language</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.language}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Publisher</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.publisher.name}">
+    </div>
+</div>
+<div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Created Date</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control" value="{book.createdDate}">
+    </div>
+</div>
+<a class="btn btn-primary" href="http://localhost:8080/page/items/books" role="button">Back to Books</a>
+{/body}
+{/include}
