--- a/vintage-store/src/main/resources/templates/ItemPage/books.html
+++ b/vintage-store/src/main/resources/templates/ItemPage/books.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{#include base.html}
+{#title}{books.size} Books{/title}
+{#body}
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Title</th>
+        <th scope="col">Isbn</th>
+        <th scope="col">n° Pages</th>
+        <th scope="col">Price</th>
+        <th scope="col">Language</th>
+        <th scope="col">Artist</th>
+    </tr>
+    </thead>
+    <tbody>
+    {#for book in books}
+    <tr>
+        <th scope="row"><a href="http://localhost:8080/page/items/books/{book.id}">{book.id}</a></th>
+        <td>{book.title}</td>
+        <td>{book.isbn}</td>
+        <td>{book.nbOfPages}</td>
+        <td>{book.price}</td>
+        <td>{book.language}</td>
+        <td><a href="http://localhost:8080/page/artists/{book.artist.id}">{book.artist.name}</a></td>
+    </tr>
+    {/for}
+    </tbody>
+</table>
+{/body}
+{/include}
